syntax = "proto3";
package user.events;

message CourseCreated {
  string courseId = 1;
  string creatorId = 2;
}